# structures-benchmark

./: .gitignore  CHANGES  LICENSE  README  containers-benchmark.cabal
scripts/: benchmark.sh  cmp.pl  cmp.sh  collect.pl  compile.sh  custom_containers.sh  ghc.sh  run.sh  see.sh  system_containers.sh
src/: Benches.hs  Driver.inc.hs~  Main.hs  Main.hs~  alter_delete  alter_insert  containers.hs  script.sh  struct.hi  struct.hs  testing.html  typescript
src/Benchmark/: Map-like.inc.hs~
src/Container/: HashMap.hs  IntMap.hs  Map.hs  StrictPair.hs
src/Container/HashMap/: Base.hs  Lazy.hs  Strict.hs
src/Container/IntMap/: Base.hs  Lazy.hs  Strict.hs
src/Container/Map/: Base.hs  Lazy.hs  Strict.hs
src/InputData/: ByteString.hs  Int.hs  IntegerBig.hs  IntegerSmall.hs  String.hs
src/Variants/: HashMap_ByteString.hs  HashMap_ByteString.hs~  HashMap_Int.hs  HashMap_Int.hs~  HashMap_IntegerBig.hs~  HashMap_IntegerSmall.hs  HashMap_IntegerSmall.hs~  HashMap_String.hs  HashMap_String.hs~  IntMap_Int.hs  Map_ByteString.hs  Map_Int.hs  Map_IntegerBig.hs  Map_IntegerSmall.hs  Map_String.hs  gen.sh
