Name:                containers-benchmark
Version:             1.1.0.0
Synopsis:            Extensive benchmark suite for containers package.
Description:         Description (...)
Homepage:            http://git.auryn.cz/haskell/containers-benchmark/
License:             BSD3
License-file:        LICENSE
Author:              Milan Straka
Maintainer:          fox@ucw.cz
Stability:           Experimental
Category:            Benchmarking
Build-type:          Simple
Cabal-version:       >=1.6
Extra-source-files:  CHANGES
                     README
                     scripts/benchmark.sh
                     scripts/cmp.pl
                     scripts/cmp.sh
                     scripts/collect.pl
                     scripts/compile.sh
                     scripts/custom_containers.sh
                     scripts/ghc.sh
                     scripts/run.sh
                     scripts/see.sh
                     scripts/system_containers.sh
                     src/Driver.inc.hs
                     src/Benchmark/Map-like.inc.hs
                     src/Benchmark/Set-like.inc.hs
                     src/Variants/gen.sh

source-repository head
  type:     git
  location: http://git.auryn.cz/haskell/containers-benchmark/

Executable benchmark
  Main-is:           Main.hs
  Build-depends:     base >= 4 && < 5,
                     bytestring >= 0.9,
                     containers >= 0.5 && < 0.6,
                     unordered-containers >= 0.2.5,
                     criterion >= 1.0,
                     random >= 1.1,
                     deepseq,
                     ghc-prim
  Hs-source-dirs:    src
  Other-modules:     Container.IntMap
                     Container.IntMap.Base
                     Container.IntMap.Lazy
                     Container.IntMap.Strict
                     Container.Map
                     Container.Map.Base
                     Container.Map.Lazy
                     Container.Map.Strict
                     Container.StrictPair
                     InputData.ByteString
                     InputData.Int
                     InputData.IntegerBig
                     InputData.IntegerSmall
                     InputData.String
                     Variants.IntMap_Int
                     Variants.Map_ByteString
                     Variants.Map_Int
                     Variants.Map_IntegerBig
                     Variants.Map_IntegerSmall
                     Variants.Map_String
                     Variants.HashMap_ByteString
                     Variants.HashMap_Int
                     Variants.HashMap_IntegerBig
                     Variants.HashMap_IntegerSmall
                     Variants.HashMap_String
  if impl(ghc >= 7.0)
    Ghc-Options: -rtsopts
